Responsive верстка index/sign-in/sign-up. Блоки header/footer/modal/main-nav/slider/link

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -46,6 +46,8 @@ mixin footer(options)
                 })
 
         .footer__row.footer__row--bottom
+            .footer__mobile-logo
+                +logo()
             .footer__copyright
                 - var data = new Date();
                 - var currentYear = data.getFullYear();
