--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,24 +3,97 @@
   box-sizing: border-box;
   display: flex;
   justify-content: flex-end;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   align-items: center;
   padding: $site-padding;
   padding-top: 0.9rem;
   padding-bottom: 0.9rem;
   box-shadow: 0 5px 15px -10px rgba(0, 0, 0, 0.5);
-  &__menu {
-    margin-right: 1.25rem;
-  }
+
   &__logo {
     margin-right: auto;
   }
 
-  &__guestMenu .main-navigation__item {
-    margin-right: 1.5rem;
+  &__menu-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex: 1 1 auto;
+    align-items: center;
+  }
 
-    &:last-child {
-      margin-right: 0;
+  &__menu-toggle {
+    display: none;
+    margin-left: auto;
+    width: 40px;
+    height: 40px;
+    background: 4px  5px url("../../assets/img/icons/menu.svg") no-repeat;
+    border: none
+  }
+
+  &__menu {
+    margin-right: 1.25rem;
+
+  }
+
+
+  &__guest-menu {
+    flex-shrink: 0;
+
+    .main-navigation__item {
+      margin-right: 1.5rem;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
+  }
+
+
+  @include media-breakpoint-down(1199px) {
+    padding: 0.9rem 2rem;
+    margin: 0 auto;
+    &__menu-toggle {
+      display: inline-block;
+      z-index: 11;
+      transition: 0.4s;
+
+      &.active {
+        filter: invert(100%);
+      }
+
+    }
+    &__menu-wrapper {
+      display: none;
+      z-index: 10;
+      position: fixed;
+      top: 0;
+      right: 0;
+      padding-top: 5vh;
+      width: 100vw;
+      height: 100vh;
+
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+
+      background: rgba(0, 0, 0, 0.95);
+
+      &.active {
+        display: flex;
+      }
+    }
+
+    &__menu .main-navigation__item {
+      margin-top: 10px;
+    }
+    & .link {
+      color: white;
+      font-size: 1.25rem;
+    }
+    &__guest-menu .main-navigation__item {
+      margin-top: 30px;
+    }
+
   }
 }
