--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -7,6 +7,10 @@ $dropdown-width: 15rem;
   padding: 0.5rem 0.5rem 0.5rem 1rem;
   &:hover {
     color: $dark-shade_1;
+
+    &::after {
+      transform: rotate(-135deg);
+    }
   }
 
   &--active {
@@ -45,7 +49,7 @@ $dropdown-width: 15rem;
     list-style: none;
     margin: 0;
     padding: 0.5rem 0;
-    z-index: 1;
+    z-index: 10;
 
     flex-direction: column;
 
@@ -99,4 +103,26 @@ $dropdown-width: 15rem;
 
     }
   }
+
+  @include media-breakpoint-down(1199px) {
+    &:hover {
+      color: rgba(255, 255, 255, 0.7)
+    }
+
+    &::after {
+      width: 9px;
+      height: 9px;
+      top: 35%;
+
+      border-bottom: 2px solid white;
+      border-right: 2px solid white;
+    }
+
+    &__dropdown-list {
+      & .link {
+        color: $dark-shade_0-50;
+      }
+    }
+  }
+
 }
