--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -1,29 +1,32 @@
 @import '../../theme/variables.scss';
 
 .room-card {
+  min-width: 250px;
+  max-width: 300px;
   width: 100%;
   background: white;
   box-shadow: 0 2px 5px $dark-shade_0-50;
 
   &__slider {
+    font-size: 0;
     position: relative;
     width: 100%;
-    max-height: 150px;
+    overflow: hidden;
 
     &-buttons {
       position: absolute;
+      top: 0;
       display: none;
       justify-content: space-between;
       width: 100%;
-      height: 99%;
-      max-height: 150px;
-      top: 0;
+      height: 100%;
     }
   }
 
   &:hover .room-card__slider-buttons {
     display: flex;
   }
+
 
   &__slide {
     &--hidden {
@@ -157,7 +160,4 @@
       background: url("./img/star-hollow.svg") no-repeat;
     }
   }
-
-
-
 }
