--- a/src/pages/room-page-template/room-page-template.scss
+++ b/src/pages/room-page-template/room-page-template.scss
@@ -7,18 +7,28 @@
   // Стили изображений
   &__images-wrapper {
     display: grid;
-    grid-template-areas:  "big small-top"
-                          "big small-bottom";
+    grid-template-areas:  "big small-1"
+                          "big small-2";
     grid-template-columns: 68.1% auto;
     background: saddlebrown;
     margin-bottom: 73px;
 
   }
-  &__image {
-    height: 100%;
+  &__image-box {
+    overflow: hidden;
     &:nth-child(1) { grid-area: big; }
-    &:nth-child(2) { grid-area: small-top; }
-    &:nth-child(3) { grid-area: small-bottom; }
+    &:nth-child(2) { grid-area: small-1; }
+    &:nth-child(3) { grid-area: small-2; }
+
+    &:hover img {
+      transform: scale(1.2);
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
   }
 
   // Основной контент
@@ -89,7 +99,7 @@
   }
 
   &__rating {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 
     & h3 {
       margin-bottom: 25px;
@@ -156,6 +166,79 @@
 
     & .room-page__text {
       line-height: 1.7rem;
+    }
+  }
+
+  @include media-breakpoint-down(1199px) {
+
+    &__outer-wrapper {
+      margin: 0 auto;
+      padding: 0 10vw;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    &__content-wrapper {
+      margin: 0;
+      justify-content: space-around;
+    }
+
+    &__benefits {
+      &-wrapper {
+        margin-right: 0;
+      }
+    }
+
+    &__rules,
+    &__cancel {
+      margin-bottom: 20px;
+    }
+  }
+
+  @include media-breakpoint-down(780px) {
+    &__images-wrapper {
+      grid-template-areas:  "big big"
+                          "small-1 small-2";
+      grid-template-columns: 50% 50%;
+      background: saddlebrown;
+      margin-bottom: 73px;
+
+    }
+
+    &__content-wrapper {
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    &__rules,
+    &__cancel {
+      margin-right: 0;
+      width: 85%;
+    }
+  }
+
+  @include media-breakpoint-down(400px) {
+    &__outer-wrapper {
+      padding: 0 0;
+    }
+
+    &__content-wrapper {
+      padding: 0 10px;
+    }
+
+
+    &__testimonials {
+
+      & .room-page__title {
+        margin-bottom: 10px;
+      }
+
+      &-count {
+        padding-top: 0;
+        margin-bottom: 20px;
+      }
     }
   }
 }
