--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -5,4 +5,4 @@ include ../../components/modal/modal
 block main
     .sign-in
         // <div class="slider">
-        +modal({type: 'sing-in'})
+        +modal({type: 'sign-in'})
