--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -4,7 +4,7 @@ include ../../components/modal/modal
 block main
     .sign-up
         // <div class="slider">
-        +modal({type: 'sing-up'})
+        +modal({type: 'sign-up'})
 
 
 
