Добавил colors&type/cards страницы (UI components)

--- a/src/pages/base/base-data.pug
+++ b/src/pages/base/base-data.pug
@@ -2,24 +2,26 @@
   // Меню шапки
   locals.headerMenuItems = [
     {
-      text: 'О нас',
+      text: 'UI components',
       href: '/UI.html',
-      isActive: true
     }, {
-      text: 'Услуги',
+      text: 'О нас',
+      href: '/mock-address/change-me',
+    }, {
+      text: 'Каталог',
       href: '/catalog.html',
       dropdown: true,
       dropdownContent: [
         {
-          text: 'Хамам',
+          text: 'Раздел',
           href: '/mock-address/change-me'
         },
         {
-          text: 'Игровой зал',
+          text: 'Еще один раздел',
           href: '/mock-address/change-me'
         },
         {
-          text: 'Библиотека',
+          text: 'Раздел с очень длииинным названием',
           href: '/mock-address/change-me'
         }
       ]
