--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -105,16 +105,8 @@
   }
 
   & .datepicker--button {
+    @include borderless-button-style;
     width: 45%;
-
-    font-size: 0.8rem;
-    font-weight: bold;
-    text-transform: uppercase;
-
-    color: $purple;
-    background: transparent;
-    border: none;
-
   }
 }
 
