--- a/src/components/filter/filter-data.pug
+++ b/src/components/filter/filter-data.pug
@@ -7,11 +7,11 @@
         ],
         accessibility: [
             {
-                labelTitle: 'Широки коридор',
-                labelText: 'Ширина коридоров в номере не менее 91 см.',
+                labelTitle: 'Широкий коридор',
+                labelText: 'Ширина коридоров в номере не менее 91 см.'
             }, {
                 labelTitle: 'Помощник для инвалидов',
-                labelText: 'На 1 этаже вас встретит специалист  и проводит до номера.',
+                labelText: 'На 1 этаже вас встретит специалист  и проводит до номера.'
             },
         ],
         additional: [
@@ -24,5 +24,5 @@
             {labelText: 'Шампунь'},
             {labelText: 'Еще один телевизор'},
             {labelText: 'Целых два шампуня!!!'},
-        ],
+        ]
     }
