--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -3,6 +3,10 @@
 .pagination {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 520px;
+
   &__list {
     display: flex;
     flex-direction: row;
@@ -19,6 +23,11 @@
       justify-content: center;
       align-items: flex-end;
     }
+  }
+
+  &__text {
+    width: 100%;
+    text-align: center;
   }
 
   &__link {
