--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -8,9 +8,7 @@
   padding-bottom: 10px;
 
   &__title {
-    font-size: 0.9rem;
-    font-weight: bold;
-    text-transform: uppercase;
+    @include h3-style;
   }
 
   &__fields-wrapper {
