--- a/src/components/testimonial/testimonial.pug
+++ b/src/components/testimonial/testimonial.pug
@@ -1,10 +1,10 @@
-
+include ../like-button/like-button
 
 mixin testimonial(options)
     article.testimonial
         .testimonial__wrapper--left
             img.testimonial__avatar(src=options.avatar)
-            span.testimonial__likes= options.likesCount
+            +like-button({value: options.likesCount})
         .testimonial__wrapper--right
             h4.testimonial__name= `${options.firstName} ${options.sureName}`
             span.testimonial__time= `${options.timePassed}`
