--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   font-size: 1rem;
   color: $dark-shade_0-75;
 
@@ -25,32 +25,6 @@
     border-radius: 50%;
   }
 
-  &__likes {
-    position: relative;
-    display: inline-block;
-    box-sizing: border-box;
-    width: 40px;
-    height: 20px;
-    padding-top: 3px;
-    padding-left: 5px;
-    font-size: 0.7rem;
-    color: $purple;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid $purple;
-    border-radius: 10px;
-
-    &::before {
-      position: absolute;
-      content: "";
-      width: 10px;
-      height: 10px;
-      top: 5px;
-      left: 5px;
-      background: url(../../assets/img/icons/icon-like-heart.svg) no-repeat;
-    }
-  }
-
   &__name {
     margin: 0;
     margin-bottom: 10px;
@@ -58,7 +32,7 @@
   }
 
   &__text {
-    line-height: 1.6rem;
+    @include text-style;
   }
 
 
