--- a/src/pages/catalog/catalog.scss
+++ b/src/pages/catalog/catalog.scss
@@ -4,7 +4,7 @@
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  padding: 30px 140px 65px;
+  padding: 30px 140px 57px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -55,13 +55,11 @@
       justify-content: flex-start;
       width: 100%;
     }
-
+    @include h1-style;
     display: inline-block;
     margin-right: auto;
-    padding-top: 5px;
-    padding-bottom: 20px;
-    font-size: 1.75rem;
-    font-weight: bold;
+    padding-top: 3px;
+    padding-bottom: 22px;
   }
 
   &__list {
@@ -81,7 +79,7 @@
     align-items: center;
     justify-content: center;
     width: 32%;
-    margin-bottom: 20px;
+    margin-bottom: 21px;
   }
 
   &__pagination {
