--- a/src/pages/room-page-template/room-page-template.scss
+++ b/src/pages/room-page-template/room-page-template.scss
@@ -11,7 +11,7 @@
                           "big small-2";
     grid-template-columns: 68.1% auto;
     background: saddlebrown;
-    margin-bottom: 73px;
+    margin-bottom: 70px;
 
   }
   &__image-box {
@@ -49,8 +49,9 @@
   }
 
   &__title {
+    @include h2-style;
+    text-transform: none;
     margin: 0;
-    font-size: 1.4rem;
   }
 
   &__subtitle {
@@ -129,33 +130,10 @@
     }
   }
 
-  &__rules {
+  &__bullet {
     width: 35%;
     margin-right: 12%;
     padding-left: 20px;
-    &-list {
-      margin: 0;
-      padding: 0;
-      margin-top: 20px;
-      list-style: none;
-    }
-
-    &-item {
-      position: relative;
-      line-height: 1.5rem;
-      margin-bottom: 15px;
-
-      &::before {
-        position: absolute;
-        content: "";
-        top: 5px;
-        left: -20px;
-        width: 10px;
-        height: 10px;
-        background-color: $dark-shade_0-25;
-        border-radius: 50%;
-      }
-    }
   }
 
   &__cancel {
